Icon-label alignment fix exlm-3940

--- a/scripts/user-actions/user-actions.css
+++ b/scripts/user-actions/user-actions.css
@@ -1,6 +1,7 @@
 .user-actions {
-  align-items: baseline;
+  align-items: flex-start;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .user-actions button {
